ipynb file updated

--- a/hello_world.ipynb
+++ b/hello_world.ipynb
@@ -17,6 +17,27 @@
    "source": [
     "print('Hello World')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "68c24d4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "A=10\n",
+    "B=20\n",
+    "C=A+B\n",
+    "print(C)"
+   ]
   }
  ],
  "metadata": {
