--- a/Test_2/name.ipynb
+++ b/Test_2/name.ipynb
@@ -124,7 +124,9 @@
    "id": "5227a520",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print('error')"
+   ]
   }
  ],
  "metadata": {
